--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+<img class="header-footer-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
+
 <div class="map-and-info">
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.11421088682!2d-88.27920704934374!3d42.680122979064436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880584db62f3c859%3A0x653cc5ed514d0495!2sZarek+Insurance%2C+Inc.!5e0!3m2!1sen!2sus!4v1513323151244" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
