--- a/static/css/home.css
+++ b/static/css/home.css
@@ -93,7 +93,7 @@
   .insurance-rates div p {
     color: #fff;
     font-size: 56px;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; }
+    text-shadow: -1px -1px 0 #1f1f1f, 1px -1px 0 #1f1f1f, -1px 1px 0 #1f1f1f, 1px 1px 0 #1f1f1f; }
   .insurance-rates h4 {
     font-size: 24px;
     margin: 40px 0 0; }
