--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 
     <link rel="stylesheet" href="static/css/grids.css">
     <script src="https://use.fontawesome.com/a01f837deb.js"></script>
+    <link rel="shortcut icon" href="static/images/zarek_insurance_logo_icon_medium.png"/>
 
     <!-- Custom stylesheets -->
     <link rel="stylesheet" href="static/css/base.css">
@@ -68,6 +69,7 @@
     {% endblock %}
 
     <footer>
+        <img class="header-footer-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
         <div class="pure-g">
             <div class="pure-u-1 pure-u-md-1-2">
                 <div class="pure-g">
