Added event tracking

--- a/templates/base.html
+++ b/templates/base.html
@@ -120,6 +120,7 @@
 <script src="static/js/jquery.marquee.min.js"></script>
 <script src="static/js/marquee.js"></script>
 <script src="static/js/dropDownMenu.js"></script>
+<script src="static/js/track.js"></script>
 
 </body>
 </html>
