--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<img class="header-footer-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
+<img class="header-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
 
 <div class="about-us">
     <h2>About Zarek Insurance - Since 1952</h2>
