--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
     {% endblock %}
 
     <footer>
-        <img class="header-footer-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
+        <img class="footer-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
         <div class="pure-g">
             <div class="pure-u-1 pure-u-md-1-2">
                 <div class="pure-g">
