--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<img class="header-footer-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
+<img class="header-logo" src="static/images/zarek_insurance_logo_icon_medium.png" alt="Zarek Insurance Burlington WI">
 
 <div class="map-and-info">
     <div class="map">
